--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,3 @@
-# Pipeline on Github Actions
-
 name: CI/CD Pipeline
 
 on:
@@ -11,7 +9,6 @@ on:
 jobs:
   build-and-test:
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
@@ -38,15 +35,26 @@ jobs:
         with:
           name: reconstruction-matrices
           path: artifacts/
-        
+
   docker:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Build Docker image
-        run: docker build -t explainability .
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v3
+        with:
+          context: .
+          push: true
+          tags: ghcr.io/${{ github.repository }}/explainability:latest
 
       - name: Run tests inside Docker
-        run: docker run --rm explainability python run_tests.py --approach all
+        run: docker run --rm ghcr.io/${{ github.repository }}/explainability:latest python run_tests.py --approach all
