--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: Set repository name in lowercase
+        id: repo_lower
+        run: echo "repo=$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_OUTPUT
+
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v2
         with:
@@ -54,7 +58,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: ghcr.io/${{ github.repository.toLowerCase() }}/explainability:latest
+          tags: ghcr.io/${{ steps.repo_lower.outputs.repo }}/explainability:latest
 
       - name: Run tests inside Docker
-        run: docker run --rm ghcr.io/${{ github.repository.toLowerCase() }}/explainability:latest python run_tests.py --approach all
+        run: docker run --rm ghcr.io/${{ steps.repo_lower.outputs.repo }}/explainability:latest python run_tests.py --approach all
